--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
     <!-- fonts from google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,19 +15,22 @@
     <!-- get rid of favicon error -->
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   </head>
-  <body>
-    <div align="center">
+  <body class="bg-secondary text-light">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  <div align="center">
       <h1>Game Wishlist</h1>
       <div class="flex-row">
-          <table id="wishlist">
-            <tr class="card">
+          <table id="wishlist" class="table table-secondary table-hover">
+            <tr>
               <th>Name</th>
               <th>Review</th>
               <th>Price</th>
+              <th>Edit</th>
+              <th>Delete</th>
             </tr>
           </table>
         <div class="flex-col">
-          <table id="derived">
+          <table id="derived" class="table table-secondary table-hover">
             <tr>
               <th>Total Price</th>
               <th>Average Price</th>
@@ -38,7 +42,7 @@
               <input type="text" id="gamename" placeholder="Game Name">
               <input type="text" id="gamereview" placeholder="Game Review">
               <input type="number" id="gameprice" placeholder="Game Price">
-              <button>Add Game</button>
+              <button class="btn btn-outline-light">Add Game</button>
             </div>
           </form>
         </div>
